--- a/hyperparameter_analysis.ipynb
+++ b/hyperparameter_analysis.ipynb
@@ -685,14 +685,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "500 {'loss': None, 'status': 'fail', 'eval_time': 1715189105.534315, 'parameters': {'ent_coef': 0.1912112831493863, 'gamma': 0.9645757712082429, 'learning_rate': 0.07878205322407149, 'timeframe': '15min'}}\n"
+          "ename": "NameError",
+          "evalue": "name 'pickle' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m trials_timeframe \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgym_mtsim_forked/examples/hyperopt/trials_5_8_timeframe_test.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# for trial in trials_timeframe.results:\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#     trial['volume'] = 'new'\u001b[39;00m\n\u001b[0;32m      4\u001b[0m trials_timeframe_all_results \u001b[38;5;241m=\u001b[39m trials_timeframe\u001b[38;5;241m.\u001b[39mresults\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'pickle' is not defined"
           ]
         }
       ],
@@ -1128,24 +1132,24 @@
         }
       ],
       "source": [
-        "# results_df = pd.DataFrame()\n",
-        "# new_dict = {}\n",
-        "# for idx, result in enumerate(trials_timeframe_all_results):\n",
-        "#     new_dict['loss'] = result['loss']\n",
-        "#     new_dict['status'] = result['status']\n",
-        "#     new_dict['timeframe'] = result['parameters']['timeframe']\n",
-        "#     new_dict['learning_rate'] = result['parameters']['learning_rate']\n",
-        "#     new_dict['ent_coef'] = result['parameters']['ent_coef']\n",
-        "#     new_dict['gamma'] = result['parameters']['gamma']\n",
-        "#     try:\n",
-        "#         new_dict['orders'] = result['parameters']['avg_orders']\n",
-        "#         new_dict['profits'] = result['parameters']['profits']\n",
-        "#     except: \n",
-        "#         new_dict['orders'] = 0\n",
-        "#         new_dict['profits'] = 0\n",
-        "#     new_row = pd.DataFrame(new_dict, index=[idx])\n",
-        "#     results_df = pd.concat([results_df, new_row], axis=0)\n",
-        "# results_df\n"
+        "results_df = pd.DataFrame()\n",
+        "new_dict = {}\n",
+        "for idx, result in enumerate(trials_timeframe_all_results):\n",
+        "    new_dict['loss'] = result['loss']\n",
+        "    new_dict['status'] = result['status']\n",
+        "    new_dict['timeframe'] = result['parameters']['timeframe']\n",
+        "    new_dict['learning_rate'] = result['parameters']['learning_rate']\n",
+        "    new_dict['ent_coef'] = result['parameters']['ent_coef']\n",
+        "    new_dict['gamma'] = result['parameters']['gamma']\n",
+        "    try:\n",
+        "        new_dict['orders'] = result['parameters']['avg_orders']\n",
+        "        new_dict['profits'] = result['parameters']['profits']\n",
+        "    except: \n",
+        "        new_dict['orders'] = 0\n",
+        "        new_dict['profits'] = 0\n",
+        "    new_row = pd.DataFrame(new_dict, index=[idx])\n",
+        "    results_df = pd.concat([results_df, new_row], axis=0)\n",
+        "results_df\n"
       ]
     },
     {
