testing a daily retraining of the model on 3 timeframes with normal reward

--- a/increasing_data_for_model.ipynb
+++ b/increasing_data_for_model.ipynb
@@ -180,9 +180,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "slices_5min = fx_rl.slices_finder(symbols_5min[1]['EURUSD'], max_date_5min, training_refresh='day', testing_needed=True)\n",
-        "slices_15min = fx_rl.slices_finder(symbols_15min[1]['EURUSD'], max_date_15min, training_refresh='day', testing_needed=True)\n",
-        "slices_1hr = fx_rl.slices_finder(symbols_1hr[1]['EURUSD'], max_date_1hr, training_refresh='day', testing_needed=True)"
+        "slices_5min = fx_rl.slices_finder(symbols_5min[1]['EURUSD'], max_date_5min, testing_needed=True)\n",
+        "slices_15min = fx_rl.slices_finder(symbols_15min[1]['EURUSD'], max_date_15min, testing_needed=True)\n",
+        "slices_1hr = fx_rl.slices_finder(symbols_1hr[1]['EURUSD'], max_date_1hr, testing_needed=True)"
       ]
     },
     {
@@ -318,7 +318,7 @@
         "        hedge=True,\n",
         "        symbols_filename=data_path\n",
         "    )\n",
-        "    env_training = MyMtEnv(\n",
+        "    env_training = gym_mtsim.MtEnv(\n",
         "        original_simulator=sim_training,\n",
         "        trading_symbols=['EURUSD'],\n",
         "        window_size = 10,\n",
@@ -341,7 +341,7 @@
         "        hedge=True,\n",
         "        symbols_filename=data_path\n",
         "    )\n",
-        "    env_validation = MyMtEnv(\n",
+        "    env_validation = gym_mtsim.MtEnv(\n",
         "        original_simulator=sim_validation,\n",
         "        trading_symbols=['EURUSD'],\n",
         "        window_size = 10,\n",
@@ -525,12 +525,39 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[96, 192, 288, 384, 480] [24, 48, 72, 96, 120] [288, 576, 864, 1152, 1440]\n",
+            "[0, 96, 192, 288, 384] [0, 24, 48, 72, 96] [0, 288, 576, 864, 1152]\n"
+          ]
+        }
+      ],
+      "source": [
+        "day_max_15min_slices = [96, 192, 288, 384, 480]\n",
+        "day_max_1hr_slices = [int(i/4) for i in day_max_15min_slices]\n",
+        "day_max_5min_slices = [int(i*12) for i in day_max_1hr_slices]\n",
+        "\n",
+        "min_15min_slices = [0, 96, 192, 288, 384]\n",
+        "min_1hr_slices = [int(i/4) for i in min_15min_slices]\n",
+        "min_5min_slices = [int(i*12) for i in min_1hr_slices]\n",
+        "\n",
+        "print(day_max_15min_slices, day_max_1hr_slices, day_max_5min_slices)\n",
+        "print(min_15min_slices, min_1hr_slices, min_5min_slices)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
         "# TRAINING + TEST\n",
-        "def train_val_model(model, model_policy, env_tr, env_val, seed, steps_str, lr, gamma_param, entropy, total_learning_timesteps=10_000):\n",
+        "def train_val_model(model, model_policy, seed, steps_str, lr, gamma_param, entropy, timeframe, total_learning_timesteps=10_000):#env_tr, env_val,\n",
         "    \"\"\"\n",
         "    Trains and validates a model using the Proximal Policy Optimization (PPO) algorithm.\n",
         "\n",
@@ -555,60 +582,90 @@
         "    torch.manual_seed(seed)\n",
         "    random.seed(seed)\n",
         "    np.random.seed(seed)\n",
-        "\n",
-        "    #model_dict = {}\n",
-        "    # env_tr.window_size = window_size_param\n",
-        "    # print(f'entropy: {entropy}, learning rate: {lr}, gamma: {gamma_param}')\n",
-        "    # eval_callback = EvalCallback(env_tr, log_path='./logs/', eval_freq=1000)\n",
-        "    obs_tr, info_tr = env_tr.reset(seed=seed)\n",
-        "    model = PPO(model_policy, env_tr, verbose=0)#, ent_coef=entropy, learning_rate=lr)#, gamma=gamma_param, \n",
+        "    num_episodes = 10\n",
+        "    reward_over_tests = []\n",
+        "    orders_over_tests = []\n",
+        "    profit_over_tests = []\n",
+        "    if timeframe == '5min':\n",
+        "        min_slices, day_max_slices = [0, 288, 576, 864, 1152], [288, 576, 864, 1152, 1440]\n",
+        "        slices = slices_5min\n",
+        "    elif timeframe == '15min':\n",
+        "        min_slices, day_max_slices = [0, 96, 192, 288, 384], [96, 192, 288, 384, 480]\n",
+        "        slices = slices_15min\n",
+        "    elif timeframe == '1hr':\n",
+        "        min_slices, day_max_slices = [0, 24, 48, 72, 96], [24, 48, 72, 96, 120]\n",
+        "        slices = slices_1hr\n",
         "    \n",
-        "    # custom callback for 'progress_bar'\n",
-        "    model.learn(total_timesteps=total_learning_timesteps)#, callback=ProgressBarCallback(100))\n",
-        "\n",
-        "    reward_over_validations = []\n",
-        "    orders_over_validations = []\n",
-        "    profit_over_validations = []\n",
-        "\n",
-        "    for episode in range(0, 10):\n",
-        "        obs_val, info_val = env_val.reset(seed=seed)\n",
-        "\n",
-        "        total_reward = 0\n",
-        "        done_val = False\n",
-        "\n",
-        "        while not done_val:\n",
-        "            action, _states = model.predict(obs_val)\n",
-        "            obs_val, reward_val, terminated_val, truncated_val, info_val = env_val.step(action)\n",
-        "            done_val = terminated_val or truncated_val\n",
-        "\n",
-        "            total_reward += reward_val\n",
-        "            if done_val:\n",
-        "                break\n",
-        "        try:\n",
-        "            orders_made_in_episode = env_val.render()['orders']\n",
-        "            order_len = len(orders_made_in_episode)\n",
-        "            total_reward, total_profit = my_profit_calculation(orders_made_in_episode, 0.001)\n",
-        "            \n",
-        "        except Exception as e:\n",
-        "            print(f'There were not any orders produced by the model. Error: {e}')\n",
-        "            order_len = 0\n",
-        "            total_profit = 0\n",
-        "\n",
-        "        # model_dict[f'model_{episode}'] = model\n",
-        "        # model.save(f'best_hyperparameters/models_4_26_24/model_{episode}.pkl')\n",
-        "\n",
-        "        reward_over_validations.append(total_reward) \n",
-        "        profit_over_validations.append(total_profit)   \n",
-        "        orders_over_validations.append(order_len)  \n",
+        "    for mins, maxes in zip(min_slices, day_max_slices):\n",
+        "        slices_ready = [0, 0]\n",
+        "        slices_ready[1] = slices[1][mins:maxes]\n",
+        "        timestep_max = slices_ready[1][0]\n",
+        "        slices_tmp = slices[1][slices[1] < timestep_max]\n",
+        "        slices_ready[0] = slices[0].append(slices_tmp)\n",
+        "        \n",
+        "        env_tr, env_val = env_fx(timeframe, slices_ready)\n",
+        "        obs_test, info_test = env_val.reset(seed=seed)\n",
+        "        obs_tr, info_tr = env_tr.reset(seed=seed)\n",
+        "        model = PPO(model_policy, env_tr, verbose=0)#, ent_coef=entropy, learning_rate=lr)#, gamma=gamma_param, \n",
+        "        \n",
+        "        # custom callback for 'progress_bar'\n",
+        "        model.learn(total_timesteps=total_learning_timesteps)#, callback=ProgressBarCallback(100))\n",
+        "        reward_over_validations = []\n",
+        "        orders_over_validations = []\n",
+        "        profit_over_validations = []\n",
         "\n",
         "\n",
-        "        # if episode % 1 == 0:\n",
-        "        avg_reward = np.mean(reward_over_validations)\n",
-        "        avg_orders = np.mean(orders_over_validations)\n",
-        "        avg_profit = np.mean(profit_over_validations)\n",
-        "        print(f'Episode: {episode}, Avg. Reward: {avg_reward:.3f}, # of orders: {avg_orders:.3f}, avg Profit: {avg_profit:.3f}')\n",
         "\n",
-        "    return reward_over_validations, orders_over_validations, profit_over_validations#, model_dict"
+        "        for episode in range(num_episodes):\n",
+        "            obs_val, info_val = env_val.reset(seed=seed)\n",
+        "\n",
+        "            total_reward = 0\n",
+        "            done_val = False\n",
+        "\n",
+        "            while not done_val:\n",
+        "                action, _states = model.predict(obs_val)\n",
+        "                obs_val, reward_val, terminated_val, truncated_val, info_val = env_val.step(action)\n",
+        "                done_val = terminated_val or truncated_val\n",
+        "\n",
+        "                total_reward += reward_val\n",
+        "                if done_val:\n",
+        "                    break\n",
+        "            try:\n",
+        "                orders_made_in_episode = env_val.render()['orders']\n",
+        "                order_len = len(orders_made_in_episode)\n",
+        "                total_reward, total_profit = my_profit_calculation(orders_made_in_episode, 0.001)\n",
+        "                \n",
+        "            except Exception as e:\n",
+        "                print(f'There were not any orders produced by the model. Error: {e}')\n",
+        "                order_len = 0\n",
+        "                total_profit = 0\n",
+        "\n",
+        "            # model_dict[f'model_{episode}'] = model\n",
+        "            # model.save(f'best_hyperparameters/models_4_26_24/model_{episode}.pkl')\n",
+        "\n",
+        "            reward_over_validations.append(total_reward) \n",
+        "            profit_over_validations.append(total_profit)   \n",
+        "            orders_over_validations.append(order_len)  \n",
+        "\n",
+        "\n",
+        "            # if episode % 1 == 0:\n",
+        "            avg_reward = np.mean(reward_over_validations)\n",
+        "            avg_orders = np.mean(orders_over_validations)\n",
+        "            avg_profit = np.mean(profit_over_validations)\n",
+        "            print(f'Episode: {episode}, Avg. Reward: {avg_reward:.3f}, # of orders: {avg_orders:.3f}, avg Profit: {avg_profit:.3f}')\n",
+        "        reward_over_tests[f'{mins}'] = reward_over_validations\n",
+        "        orders_over_tests[f'{mins}'] = orders_over_validations\n",
+        "        profit_over_tests[f'{mins}'] = profit_over_validations\n",
+        "        # get the average reward, orders, and profit for the week by finding the mean of the reward_over_tests, orders_over_tests, and profit_over_tests dictionaries\n",
+        "        avg_reward_week = np.sum([np.sum(reward_over_tests[key]) for key in reward_over_tests.keys()])/(num_episodes*len(reward_over_tests.keys()))\n",
+        "        avg_orders_week = np.sum([np.sum(orders_over_tests[key]) for key in orders_over_tests.keys()])/(num_episodes*len(orders_over_tests.keys()))\n",
+        "        avg_profit_week = np.sum([np.sum(profit_over_tests[key]) for key in profit_over_tests.keys()])/(num_episodes*len(profit_over_tests.keys()))\n",
+        "        min_profit_week = np.sum([np.min(profit_over_tests[key]) for key in profit_over_tests.keys()])\n",
+        "        max_profit_week = np.sum([np.max(profit_over_tests[key]) for key in profit_over_tests.keys()])\n",
+        "\n",
+        "        print(f'Avg Profit for Week: {avg_profit_week:.3f}, Min Profit for Week: {min_profit_week:.3f}, Max Profit for Week: {max_profit_week:.3f}')\n",
+        "\n",
+        "    return avg_reward_week, avg_orders_week, avg_profit_week#, model_dict"
       ]
     },
     {
@@ -656,33 +713,9 @@
         "    ent_coef = params['ent_coef']#0#\n",
         "    gamma = params['gamma'] #0.99 #\n",
         "    learning_rate = params['learning_rate']#0.0003#\n",
-        "    bars = params['n_bars']\n",
+        "    # bars = params['n_bars']\n",
         "    timeframe = params['timeframe']\n",
-        "    if timeframe == '5min':\n",
-        "        if bars < 576:\n",
-        "            print(f'bar count too low: {bars} for {timeframe}')\n",
-        "            return {'loss': None, 'status': STATUS_FAIL, 'eval_time': time.time(), 'parameters': params}\n",
-        "        date_5min = fx_rl.bars_back(max_date_5min, 'M5', bars)\n",
-        "        training_data = symbols_5min[1]['EURUSD'][symbols_5min[1]['EURUSD'].index > date_5min]\n",
-        "        slices_5min_ob = fx_rl.slices_finder(training_data, max_date_5min, training_refresh='day', testing_needed=True)\n",
-        "        env_train_ob, env_validation_ob = env_fx('5min', slices_5min_ob)\n",
-        "    elif timeframe == '15min':\n",
-        "        if bars < 192:\n",
-        "            print(f'bar count too low: {bars} for {timeframe}')\n",
-        "            return {'loss': None, 'status': STATUS_FAIL, 'eval_time': time.time(), 'parameters': params}\n",
-        "        date_15min = fx_rl.bars_back(max_date_15min, 'M15', bars)\n",
-        "        training_data = symbols_15min[1]['EURUSD'][symbols_15min[1]['EURUSD'].index > date_15min]\n",
-        "        slices_15min_ob = fx_rl.slices_finder(training_data, max_date_15min, training_refresh='day',testing_needed=True)\n",
-        "        env_train_ob, env_validation_ob = env_fx('15min', slices_15min_ob)\n",
-        "    elif timeframe == '1hr':\n",
-        "        if bars < 360:\n",
-        "            print(f'bar count too low: {bars} for {timeframe}')\n",
-        "            return {'loss': None, 'status': STATUS_FAIL, 'eval_time': time.time(), 'parameters': params}\n",
-        "        date_1hr = fx_rl.bars_back(max_date_1hr, 'H1', bars)\n",
-        "        training_data = symbols_1hr[1]['EURUSD'][symbols_1hr[1]['EURUSD'].index > date_1hr]\n",
-        "        slices_1hr_ob = fx_rl.slices_finder(training_data, max_date_1hr, training_refresh='day', testing_needed=True)\n",
-        "        env_train_ob, env_validation_ob = env_fx('5min', slices_1hr_ob)\n",
-        "    print(f'----- bars: {bars}, timeframe: {timeframe} ------')\n",
+        "    print(f'----- timeframe: {timeframe} ------')\n",
         "    total_learning_timesteps = learning_timesteps * 1000\n",
         "    step_key = f'{learning_timesteps}K'\n",
         "    policy_dict = PPO.policy_aliases\n",
@@ -690,22 +723,22 @@
         "    class_name = type(PPO).__qualname__\n",
         "    plot_key = f'{class_name}_rewards_'+step_key\n",
         "    try:\n",
-        "        rewards, orders, profits = train_val_model(PPO, policy, env_train_ob, env_validation_ob, seed, step_key,  \n",
-        "                                                    learning_rate, gamma, ent_coef, total_learning_timesteps)\n",
+        "        avg_rewards, avg_orders, avg_profits = train_val_model(PPO, policy, seed, step_key,  \n",
+        "                                                    learning_rate, gamma, ent_coef, timeframe, total_learning_timesteps)\n",
         "    except Exception as e:\n",
         "        print(f'''there was an error {e} with those parameters: timesteps: {learning_timesteps}, \\n\n",
         "              ent_coef: {ent_coef}, gamma: {gamma}, learning_rate: {learning_rate}''')\n",
         "        return {'loss': None, 'status': STATUS_FAIL, 'eval_time': time.time(), 'parameters': params}\n",
         "    # timesteps_models_dict[step_key] = models_dict\n",
-        "    min_rewards, avg_rewards, max_rewards, = print_stats(rewards, 'Reward')\n",
-        "    print_stats(orders, 'Orders')\n",
-        "    label = f'Avg. {avg_rewards:>7.2f} : {class_name} - {step_key}'\n",
-        "    plot_data[plot_key] = rewards\n",
-        "    plot_settings[plot_key] = {'label': label}\n",
-        "    params['avg_orders'] = np.mean(orders)\n",
-        "    params['profits'] = np.mean(profits)       \n",
+        "    # min_rewards, avg_rewards, max_rewards, = print_stats(rewards, 'Reward')\n",
+        "    # print_stats(orders, 'Orders')\n",
+        "    # label = f'Avg. {avg_rewards:>7.2f} : {class_name} - {step_key}'\n",
+        "    # plot_data[plot_key] = rewards\n",
+        "    # plot_settings[plot_key] = {'label': label}\n",
+        "    params['avg_orders'] = avg_orders\n",
+        "    params['profits'] = avg_rewards       \n",
         "\n",
-        "    return {'loss': -avg_rewards, 'status': STATUS_OK, 'eval_time': time.time(), 'parameters': params} "
+        "    return {'loss': -avg_profits, 'status': STATUS_OK, 'eval_time': time.time(), 'parameters': params} "
       ]
     },
     {
