--- a/increasing_data_for_model.ipynb
+++ b/increasing_data_for_model.ipynb
@@ -260,9 +260,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "class MyMtEnv(gym_mtsim.MtEnv):\n",
-        "    # _get_modified_volume = fx_rl.my_get_modified_volume\n",
-        "    _get_prices = fx_rl.my_get_prices"
+        "# class MyMtEnv(gym_mtsim.MtEnv):\n",
+        "#     # _get_modified_volume = fx_rl.my_get_modified_volume\n",
+        "#     _get_prices = fx_rl.my_get_prices"
       ]
     },
     {
@@ -481,13 +481,13 @@
       "source": [
         "space = {\n",
         "    # 'learning_rate': hp.loguniform('learning_rate', -5, -2), # Learning rate\n",
-        "    'learning_rate': hp.uniform('learning_rate', 0, 0.04), # Learning rate\n",
+        "    'learning_rate': hp.uniform('learning_rate', 0, 0.08), # Learning rate\n",
         "    'gamma': hp.uniform('gamma', 0.925, 0.975), # Discount factor\n",
         "    # 'ent_coef': hp.loguniform('ent_coef', -5, 0) # Entropy coefficient\n",
-        "    'ent_coef': hp.uniform('ent_coef', 0, 0.05), # Entropy coefficient\n",
+        "    'ent_coef': hp.uniform('ent_coef', 0, 0.2), # Entropy coefficient\n",
         "    # 'learning_timesteps': hp.choice('learning_timesteps', [25, 50, 100, 250, 500]),\n",
         "    'timeframe': hp.choice('timeframe', ['5min', '15min', '1hr']),\n",
-        "    'n_bars': hp.uniform('nbars', 24, 100_000)\n",
+        "    # 'n_bars': hp.uniform('nbars', 24, 100_000)\n",
         "}"
       ]
     },
@@ -572,9 +572,9 @@
         "        slices_ready[0] = slices[0].append(slices_tmp)\n",
         "        \n",
         "        env_tr, env_val = env_fx(timeframe, slices_ready)\n",
-        "        obs_test, info_test = env_val.reset(seed=seed)\n",
+        "        obs_val, info_val = env_val.reset(seed=seed)\n",
         "        obs_tr, info_tr = env_tr.reset(seed=seed)\n",
-        "        model = PPO(model_policy, env_tr, verbose=0)#, ent_coef=entropy, learning_rate=lr)#, gamma=gamma_param, \n",
+        "        model = PPO(model_policy, env_tr, verbose=0, ent_coef=entropy, learning_rate=lr, gamma=gamma_param)\n",
         "        \n",
         "        # custom callback for 'progress_bar'\n",
         "        model.learn(total_timesteps=total_learning_timesteps)#, callback=ProgressBarCallback(100))\n",
